# AcquaFonte

./: .gitignore  .replit  .travis.yml  Acqua Fonte-2a34c22c7ffe.json  CertificateSigningRequest.certSigningRequest  Locations.py  README.md  app.yaml  appengine_config.py  convert_to_svg.html  excessInfo.txt  fixpath.py  hamburgerNav.html  main.py  parse-data.py  pictureclass.py  pyproject.toml  pyvenv.cfg  requirements.txt
Excess_Files/: AcquaFonte (GIS infor included).csv
about_us/: about_us.css  about_us.html
acqua_fonte/: db.sqlite3  requirements.txt
acqua_fonte/acqua_fonte/: settings.py  urls.py
acqua_fonte/api/: admin.py
backend/src/: Makefile  db.sqlite3  manage.py  openapi-schema.yml  requirements.txt
contact/: contact.css
find_water/: find_water.css  find_water.html
frontend/gui/: package-lock.json  package.json
index/: index.css  index.html
lib/Flask-1.1.1.dist-info/: RECORD
lib/gunicorn-20.0.4.dist-info/: RECORD
lib/setuptools-46.0.0.dist-info/: RECORD
static/: AcquaFonte (GIS infor included).csv  find_water.js  index.js  log_in.js  main.js
static/css/: about_us.css  add_location.css  contact.css  demo.css  find_water.css  footer-distributed-with-contact-form.css  hamburgerNav.css  index.css  log_in.css  myAccount.css  nav_bar.css
static/find_water/: map_setting.json
static/js/: add_location.js  find_water.js  hamburgerNav.js  log_in.js  myAccount.js
templates/: about_us.html  add_location.html  contact.html  find_water.html  footer.html  hamburgerNav.html  index.html  log_in.html  myAccount.html  nav_bar.html  standard.html
(+66 files in other folders)
