[tool.poetry]
name = "acquafonte"
version = "0.1.0"
description = ""
authors = ["Esteak Shapin <esteakshapin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
pymongo = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
