[tool.poetry]
name = "acquafonte"
version = "0.1.0"
description = ""
authors = ["Esteak Shapin <esteakshapin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2"
pymongo = "^3.10"
tornado = "^6.0"
cutandpaste = "^0.4.0"
eventlet = "^0.25.1"
gevent = "^1.4"
inotify = "^0.2.10"
setproctitle = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
